logs/turtlesim/build.make.010.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In constructor ‘turtlesim::Turtle::Turtle(const ros::NodeHandle&, const QImage&, const QPointF&, float)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:55:3: error: ‘pose_pub_’ was not declared in this scope
   pose_pub_ = nh_.advertise<Pose>("pose", 1);
   ^~~~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:55:3: note: suggested alternative: ‘pose_sub’
   pose_pub_ = nh_.advertise<Pose>("pose", 1);
   ^~~~~~~~~
   pose_sub
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In member function ‘bool turtlesim::Turtle::update(double, QPainter&, const QImage&, qreal, qreal)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:182:3: error: ‘pose_pub_’ was not declared in this scope
   pose_pub_.publish(p);
   ^~~~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:182:3: note: suggested alternative: ‘pose_sub’
   pose_pub_.publish(p);
   ^~~~~~~~~
   pose_sub
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
